--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
+.app {
+  color: aliceblue;
+  margin: 10% auto;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: center;
+  width: 560px;
+  border: 2px solid white;
+  box-shadow: 0 5px 27px 1px rgb(0 0 0 / 20%);
+  border-radius: 15px;
+  padding: 26px 38px;
+  transition: .5s;
+  position: relative;
+  margin-bottom: 50px;
 }
