--- a/src/components/weather/weather.css
+++ b/src/components/weather/weather.css
@@ -23,6 +23,17 @@
 
 .city-block {
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     text-align: end;
+}
+
+.weather {
+    border: 2px solid white;
+    box-shadow: 0 5px 27px 1px rgb(0 0 0 / 20%);
+    border-radius: 15px;
+    padding: 20px 25px;
+    transition: .5s;
+    position: relative;
+    margin-bottom: 40px;
 }
